--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     },
     "extra": {
-        "class": "Velsym\\Composer\\PackInstaller"
+        "class": "Velsym\\Composer\\PackInstallerPlugin"
     },
     "authors": [
         {
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "composer-plugin-api": "^2.6"
+        "composer-plugin-api": "*"
     },
     "require-dev": {
         "composer/composer": "^2.7"
