--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "composer-plugin-api": "*"
     },
     "require-dev": {
-        "composer/composer": "^2.7"
+        "composer/composer": "^2.7",
+        "phpunit/phpunit": "^11.1@dev"
     }
 }
